--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -65,7 +65,7 @@
     "import unicodedata\n",
     "unicodedata.name(eacute1)\n",
     "\n",
-    "# Return the Unicode code point for a one-character string.\n",
+    "# ord: Return the Unicode code point for a one-character string.\n",
     "ord(eacute1) # as a decimal integer\n"
    ]
   }
