--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -66,7 +66,8 @@
     "unicodedata.name(eacute1)\n",
     "\n",
     "# ord: Return the Unicode code point for a one-character string.\n",
-    "ord(eacute1) # as a decimal integer\n"
+    "ord(eacute1) # as a decimal integer\n",
+    "0xe9 # Unicode hex integer"
    ]
   }
  ],
